--- a/name.html
+++ b/name.html
@@ -2,16 +2,17 @@
 <head>
   <title>ประวัติส่วนตัว</title>
 </head>
-<body>
+<body bgcolor="SkyBlue">
   <h1><marquee>ยินดีต้อนรับเข้าสู่ประวัติส่วนตัวของฉัน</marquee></h1>
   <center>
-    <font style="color:pink">ชื่อ ด.ช. ปุณณพัสณ์ เอี่ยมชื่น ม.212 เลขที่ 13 </font>
-    <font style="color:red">ปัจจุบันเรียนอยู่ที่โรงเรียนสวนกุหลาบวิทยาลัย🌹</font>
-    <font style="color:blue">ชื่อเล่น : ปุณณ์</font>
-    <font style="color green">อายุ : 13 ปี 👶</font>
-    <font style="color:brown">ผลไม้ที่ชอบ : ส้ม🍊</font>
-    <font style="color:violet">เครื่องดื่มที่ชอบ : โกโก้🧃 </font>
+    <font style="color:pink">ชื่อ ด.ช. ปุณณพัสณ์ เอี่ยมชื่น ม.212 เลขที่ 13 </font>br<><br>
+    <font style="color:red">ปัจจุบันเรียนอยู่ที่โรงเรียนสวนกุหลาบวิทยาลัย🌹</font><br><br>
+    <font style="color:blue">ชื่อเล่น : ปุณณ์</font><br><br>
+    <font style="color green">อายุ : 13 ปี 👶</font><br><br>
+    <font style="color:brown">ผลไม้ที่ชอบ : ส้ม🍊</font><br><br>
+    <font style="color:violet">เครื่องดื่มที่ชอบ : โกโก้🧃 </font><br><br>
     <font style="color:yellow">ข้อมูลติดต่อ : LineID:pun231254🐇</font>
+      
   </center>
 </body>
 </html>
