--- a/name.html
+++ b/name.html
@@ -5,7 +5,7 @@
 <body bgcolor="SkyBlue">
   <h1><marquee>ยินดีต้อนรับเข้าสู่ประวัติส่วนตัวของฉัน</marquee></h1>
   <center>
-    <font style="color:pink">ชื่อ ด.ช. ปุณณพัสณ์ เอี่ยมชื่น ม.212 เลขที่ 13 </font>br<><br>
+    <font style="color:pink">ชื่อ ด.ช. ปุณณพัสณ์ เอี่ยมชื่น ม.212 เลขที่ 13 </font><br><br>
     <font style="color:red">ปัจจุบันเรียนอยู่ที่โรงเรียนสวนกุหลาบวิทยาลัย🌹</font><br><br>
     <font style="color:blue">ชื่อเล่น : ปุณณ์</font><br><br>
     <font style="color green">อายุ : 13 ปี 👶</font><br><br>
