--- a/queen.html
+++ b/queen.html
@@ -4,10 +4,10 @@
     <title>พระนางเจ้าสุทิดา</title>
   </head>
   <body bgcolor="#8470FF">
-  <h1><marquee>พระราชประวัติสมเด็จพระนางเจ้าสุทิดา พัชรสุธาพิมลลักษณ พระบรมราชินี</marquee></h1>
+  <h1><marquee>พระราชประวัติสมเด็จพระนางเจ้าสุทิดา พัชรสุธาพิมลลักษณ พระบรมราชินี</marquee></h1><br></font>
     <br>
     <center>
-    <h1><font style="color:#A0522D">สมเด็จพระนางเจ้าสุทิดา พัชรสุธาพิมลลักษณ พระบรมราชินี
+    <h1><font style="color:#A0522D">สมเด็จพระนางเจ้าสุทิดา พัชรสุธาพิมลลักษณ พระบรมราชินี</h1></font>
     <br><br>
     <img src="https://image.bangkokbiznews.com/image/kt/media/image/fileupload1/source/159108578788.jpg?1591097708522" width=200 height=200>
     <br><br>
