--- a/teacher.html
+++ b/teacher.html
@@ -2,7 +2,8 @@
   <head>
     <meta charset="utf-8">
     <title>ครูของฉัน</title>
-  </head>
-<body>
-</body>
+      </head>
+  <body background="https://png.pngtree.com/thumb_back/fh260/background/20230410/pngtree-free-aesthetic-background-alcohol-ink-blue-pink-for-wallpaper-or-banner-image_2372026.jpg">
+    <marquee onmouseover=stop() onmouseout=start()scrollamount=5>ครูในความทรงจำ..ไม่ลืมเลือน 2568 ❤🌹</marquee>
+  </body>
 </html>
