--- a/teacher.html
+++ b/teacher.html
@@ -4,6 +4,12 @@
     <title>ครูของฉัน</title>
       </head>
   <body background="https://png.pngtree.com/thumb_back/fh260/background/20230410/pngtree-free-aesthetic-background-alcohol-ink-blue-pink-for-wallpaper-or-banner-image_2372026.jpg">
-    <marquee onmouseover=stop() onmouseout=start()scrollamount=5>ครูในความทรงจำ..ไม่ลืมเลือน 2568 ❤🌹</marquee>
+    <marquee onmouseover=stop() onmouseout=start()
+      scrollamount=5>ครูในความทรงจำ..ไม่ลืมเลือน 2568 ❤🌹</marquee>
+  <center>
+    <img src="pic.jpg" width =250 height=250>
+    <br><br>
+    <b>จัดทำโดย : เด็กชายปุณณพัสณ์ เอี่ยมชื่น 212 เลขที่ 13</b>
+  </center>
   </body>
 </html>
