--- a/teacher.html
+++ b/teacher.html
@@ -7,6 +7,19 @@
     <marquee onmouseover=stop() onmouseout=start()
       scrollamount=5>ครูในความทรงจำ..ไม่ลืมเลือน 2568 ❤🌹</marquee>
   <center>
+    <img="scr"https://lh5.googleusercontent.com/sKpcxXpjZzE-f-31iYka1JmZB37LJPm-2trjSNcTvaGDha8N20ryYUWK8IIyaBswkqvRRwUcQO4kMcqgjGUgxzrPFwbjjWapenuB6hEMd8-nW_M-VvwnAkg-ibddm4pnYcrXR2b6yl840alCKkL2vNv9T6hT3kvWrCqLSaQVe865_UFPcpgMFw=w1280" width=250 height=250>
+    <br><br>
+    นายสถาพร อุทธา : ขอบคุณมากๆครับที่ทำให้ผมเข้าใจวิชาคณิตศาสตร์
+    <br><br>
+    <b>บทเพลงที่มอบให้ครู</b>
+    <br><br>
+    <iframe width="1310" height="737" src="https://www.youtube.com/embed/OjX7v-9UQVo" title="Billkin - สวยงามเสมอ (Ever-Forever) (OST.หลานม่า)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br><br>
+
+
+
+
+    
     <img src="pic.jpg" width =250 height=250>
     <br><br>
     <b>จัดทำโดย : เด็กชายปุณณพัสณ์ เอี่ยมชื่น 212 เลขที่ 13</b>
