--- a/teacher.html
+++ b/teacher.html
@@ -7,7 +7,7 @@
     <marquee onmouseover=stop() onmouseout=start()
       scrollamount=5>ครูในความทรงจำ..ไม่ลืมเลือน 2568 ❤🌹</marquee>
   <center>
-    <img="scr"https://lh5.googleusercontent.com/sKpcxXpjZzE-f-31iYka1JmZB37LJPm-2trjSNcTvaGDha8N20ryYUWK8IIyaBswkqvRRwUcQO4kMcqgjGUgxzrPFwbjjWapenuB6hEMd8-nW_M-VvwnAkg-ibddm4pnYcrXR2b6yl840alCKkL2vNv9T6hT3kvWrCqLSaQVe865_UFPcpgMFw=w1280" width=250 height=250>
+    <img="src"https://lh5.googleusercontent.com/sKpcxXpjZzE-f-31iYka1JmZB37LJPm-2trjSNcTvaGDha8N20ryYUWK8IIyaBswkqvRRwUcQO4kMcqgjGUgxzrPFwbjjWapenuB6hEMd8-nW_M-VvwnAkg-ibddm4pnYcrXR2b6yl840alCKkL2vNv9T6hT3kvWrCqLSaQVe865_UFPcpgMFw=w1280" width=250 height=250>
     <br><br>
     นายสถาพร อุทธา : ขอบคุณมากๆครับที่ทำให้ผมเข้าใจวิชาคณิตศาสตร์
     <br><br>
