--- a/teacher.html
+++ b/teacher.html
@@ -7,19 +7,46 @@
     <marquee onmouseover=stop() onmouseout=start()
       scrollamount=5>ครูในความทรงจำ..ไม่ลืมเลือน 2568 ❤🌹</marquee>
   <center>
-    <img="src"https://lh5.googleusercontent.com/sKpcxXpjZzE-f-31iYka1JmZB37LJPm-2trjSNcTvaGDha8N20ryYUWK8IIyaBswkqvRRwUcQO4kMcqgjGUgxzrPFwbjjWapenuB6hEMd8-nW_M-VvwnAkg-ibddm4pnYcrXR2b6yl840alCKkL2vNv9T6hT3kvWrCqLSaQVe865_UFPcpgMFw=w1280" width=250 height=250>
+    <img src="https://lh5.googleusercontent.com/sKpcxXpjZzE-f-31iYka1JmZB37LJPm-2trjSNcTvaGDha8N20ryYUWK8IIyaBswkqvRRwUcQO4kMcqgjGUgxzrPFwbjjWapenuB6hEMd8-nW_M-VvwnAkg-ibddm4pnYcrXR2b6yl840alCKkL2vNv9T6hT3kvWrCqLSaQVe865_UFPcpgMFw=w1280" width=250 height=250>
     <br><br>
     นายสถาพร อุทธา : ขอบคุณมากๆครับที่ทำให้ผมเข้าใจวิชาคณิตศาสตร์
     <br><br>
     <b>บทเพลงที่มอบให้ครู</b>
     <br><br>
-    <iframe width="1310" height="737" src="https://www.youtube.com/embed/OjX7v-9UQVo" title="Billkin - สวยงามเสมอ (Ever-Forever) (OST.หลานม่า)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <iframe width="500" height="300" src="https://www.youtube.com/embed/OjX7v-9UQVo" title="Billkin - สวยงามเสมอ (Ever-Forever) (OST.หลานม่า)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <br><br>
-
-
-
-
-    
+    <img src="https://lh5.googleusercontent.com/uzIhwzIUoUS18arilYAyG46ocE3XUhp8hy_KJP5FPTt7sWNxnONgX4u3DbavrSsas58zBe9fYGvAHfgdY-phm2f_TssQtvLwZLAFNlT-qbGnCSrPRU5JEMLrazg-s6awr4m69K6R5kTeaiwMATLDNyPo2UhbiRDJIir_rrTp9qbUV0uqCBCt=w1280" width=250 height=250>
+    <br><br>
+    นายเอกพงษ์ หุมแพง : ขอบคุณมากๆครับที่สอนวิชาวิทยาศาสตร์ง่ายๆให้กับผม
+    <br><br>
+    <b>บทเพลงที่มอบให้ครู</b>
+    <br><br>
+    <iframe width="500" height="300" src="https://www.youtube.com/embed/eeZQG86uhc8" title="ความลับในใจ - สิบล้อ【OFFICIAL MV】" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br><br>
+    <img src="https://lh5.googleusercontent.com/hxjharKG2y9qzL-UmS_dkcfsXrkx55GchymYKo0L5Qag_31v9wt8-9tVEf-jIEzOu-2NMGmpMlhkXQVFZkLaqcXgqRVcdCYEZa5lwfnq298906iT6xlWYlYMaedNtxKsy-3SGNsIS01y9995aL2Nxe83UvLX64WnGpo83_vrO0SGcfH1PC_Yng=w1280" width=250 height=250>
+    <br><br>
+    นางสาวสุพรรณมณี ใจสุข : ขอบคุณมากครับที่สอนวิชาแนะแนว ม.2 ให้กับผม
+    <br><br>
+    <b>บทเพลงที่มอบให้ครู</b>
+    <br><br>
+    <iframe width="500" height="300" src="https://www.youtube.com/embed/ebxzxo_q89Y" title="F.HERO Ft. ก้านตอง ทุ่งเงิน x SARAN - กุหลาบ (KULARB) [OFFICIAL VISUALIZER]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br><br>
+    <img src"https://lh6.googleusercontent.com/bdFFgKCpNm080mKtTW4SrI_r_CtfOjwNJ3KrDU62swuYbtdolqYhxQb7U3rlJ3Tkcp72w1xqGb2fBGTbe5_UtTxkOGutyPJxy6aTy4MonzPQojks7VYfjvuW1J8KEfkYKewsMygqTB8R_Z2d4j8gqLCXL0qlSlJQKE7Sjris9rPKte7UaOtGoQ=w1280" width=250 height=250>
+    <br><br>
+    นายสิงหา สุวรรณศรี : ขอบคุณมากๆครับที่ทำให้ผมเข้าใจวิชาแนะแนวของชั้น ม.1 ทั้งหมดนะครับ
+    <br><br>
+    <b>บทเพลงที่มอบให้ครู</b>
+    <br><br>
+    <iframe width="500" height="500" src="https://www.youtube.com/embed/Jd4Hd-HFgls" title="จี่หอย - พี สะเดิด 【OFFICIAL MV】" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br><br>
+    <https://lh5.googleusercontent.com/zHZPkRP3YMdC1GnzBHmkSSdbQmvHBALq_S_8tN_5MI1SH9f16afGF3zKrhSiqapxx8BR4kYEqxXjASMTYG11Hg3Qo7Uqd34bmh4vygPNABUqO-BIE0SMK5_L0lIsYjbxYgQvSPN9glofK-Gph1FfEumcE1x8zyHkIJyK-J7XnqDzy10tI98BvQ=w1280>
+    <br><br>
+    น.ส.ศรันรัตน์ ไผ่พงศาวงศ์ : ขอบคุณมากๆครับที่ทำให้ผมเข้าใจวิชาคณิตศาสตร์ โดยเฉพาะเรื่องกราฟครับ
+    <br><br>
+    <b>บทเพลงที่มอบให้ครู</b>
+    <br><br>
+    <iframe width="500" height="500" src="https://www.youtube.com/embed/mzhAx-MOQas" title="NEW CHAYAPAK - เลิกกั๊กแล้วรักก่อน (RED FLAG) OST.GELBOYS สถานะกั๊กใจ [Official MV]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <br><br>
     <img src="pic.jpg" width =250 height=250>
     <br><br>
     <b>จัดทำโดย : เด็กชายปุณณพัสณ์ เอี่ยมชื่น 212 เลขที่ 13</b>
