--- a/teacher.html
+++ b/teacher.html
@@ -31,9 +31,9 @@
     <br><br>
     <iframe width="500" height="300" src="https://www.youtube.com/embed/ebxzxo_q89Y" title="F.HERO Ft. ก้านตอง ทุ่งเงิน x SARAN - กุหลาบ (KULARB) [OFFICIAL VISUALIZER]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <br><br>
-    <img src"https://lh6.googleusercontent.com/bdFFgKCpNm080mKtTW4SrI_r_CtfOjwNJ3KrDU62swuYbtdolqYhxQb7U3rlJ3Tkcp72w1xqGb2fBGTbe5_UtTxkOGutyPJxy6aTy4MonzPQojks7VYfjvuW1J8KEfkYKewsMygqTB8R_Z2d4j8gqLCXL0qlSlJQKE7Sjris9rPKte7UaOtGoQ=w1280" width=250 height=250>
+    <img src"https://lh5.googleusercontent.com/ovrxV5D2cLZxwKG6-SqoQD8her8DN1dWCrK6iqv-ywNgj_7k0d3pWhJjC_LOfI3HCAjCPcr1fPgBL2xMt8FzhHVeZwDq-mBcwdEwvRs2-xtiB87q8SktNS8Q177AbC2a-B_EskkEiOUk0E9_o0VSYbGXJJsaUIiFq9_B1H03lkORi4AR0g6kVg=w1280" width=250 height=250>
     <br><br>
-    นายสิงหา สุวรรณศรี : ขอบคุณมากๆครับที่ทำให้ผมเข้าใจวิชาแนะแนวของชั้น ม.1 ทั้งหมดนะครับ
+    นายนัชชา  ยืนยงอนันต์ : ขอบคุณมากๆครับที่ทำให้ผมเข้าใจวิชาภาษาอังกฤษของชั้น ม.1 ทั้งหมดนะครับ
     <br><br>
     <b>บทเพลงที่มอบให้ครู</b>
     <br><br>
