--- a/teacher.html
+++ b/teacher.html
@@ -39,7 +39,7 @@
     <br><br>
     <iframe width="500" height="300" src="https://www.youtube.com/embed/Jd4Hd-HFgls" title="จี่หอย - พี สะเดิด 【OFFICIAL MV】" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <br><br>
-    <https://lh5.googleusercontent.com/zHZPkRP3YMdC1GnzBHmkSSdbQmvHBALq_S_8tN_5MI1SH9f16afGF3zKrhSiqapxx8BR4kYEqxXjASMTYG11Hg3Qo7Uqd34bmh4vygPNABUqO-BIE0SMK5_L0lIsYjbxYgQvSPN9glofK-Gph1FfEumcE1x8zyHkIJyK-J7XnqDzy10tI98BvQ=w1280>
+    <img src="https://lh5.googleusercontent.com/zHZPkRP3YMdC1GnzBHmkSSdbQmvHBALq_S_8tN_5MI1SH9f16afGF3zKrhSiqapxx8BR4kYEqxXjASMTYG11Hg3Qo7Uqd34bmh4vygPNABUqO-BIE0SMK5_L0lIsYjbxYgQvSPN9glofK-Gph1FfEumcE1x8zyHkIJyK-J7XnqDzy10tI98BvQ=w1280" width=250 height=250>
     <br><br>
     น.ส.ศรันรัตน์ ไผ่พงศาวงศ์ : ขอบคุณมากๆครับที่ทำให้ผมเข้าใจวิชาคณิตศาสตร์ โดยเฉพาะเรื่องกราฟครับ
     <br><br>
