--- a/bud.html
+++ b/bud.html
@@ -60,6 +60,9 @@
   <iframe width="500" height="300" src="https://www.youtube.com/embed/0qTM4rGYNSM" title="กิจกรรมวันอาสาฬหบูชาและวันเข้าพรรษา" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </center>
       <hr width=50% size=5 color=770088>
-  <img src="pic.jpg" width =250 height=250>
+      <center>
+  <img src="https://github.com/Punnapat13/punnapat.github.io/blob/main/pic.jpg.jpg?raw=true" width =250 height=250><br>
+  จัดทำโดย ด.ช.ปุณณพัสณ์ เอี่ยมชื่น ห้อง 212 เลขที่ 13
+      </center>
     </body>
 </html>
