--- a/r10.html
+++ b/r10.html
@@ -2,6 +2,11 @@
   <head>
   <meta charset="utf-8">
     <title>วันเฉลิมพระชนมพรรษา</title>
+    <style>
+      mark{background-color:pink;
+          color:blue;}
+      p{text-indent: 2em;}
+    </style>
   </head>
   <body background="https://img.freepik.com/premium-vector/luxury-thai-pattern-royal-golden-background-vector-illustration_94250-692.jpg?semt=ais_hybrid&w=740&q=80">
   </body>
