--- a/mom.html
+++ b/mom.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>พระคุณของแม่</title>
     <style>
-      mark{background-color:skyblue;color:brown;}
+      mark{background-color:skyblue;color:#EB00FF;}
     p{text-indent: 2em;}
     .content{background-color:white;
             padding:30px;
@@ -14,7 +14,13 @@
   <body background="https://img.pikbest.com/back_our/20201224/bg/4b297627150b7.png!sw800">
 <div class="content"0>
   <center>
-    <h1><mark>วันแม่แห่งชาติ</mark></h1>
+    <h1><mark>วันแม่แห่งชาติ❤👩</mark></h1>
+    <h1><marquee><mark>ผมรักแม่ที่สุดในโลกเลย🌹❤</mark></marquee></h1>
+    <br><br>
+    <video width="500" height="400" 
+    controls="controls">
+    <source src="">
+    </video>
   </center>
-</div>
+ </div>
 </html>
