--- a/mom.html
+++ b/mom.html
@@ -25,5 +25,18 @@
     <img src="mom1.jpg" width=250 height=250
       style="border:5px dotted skyblue;">
   </center>
+  <br><br>
+  <p>ผมขอขอบคุณแม่ในเรื่องที่ทุกๆ เช้าแม่ของฉันเป็นคนที่ตื่นตั้งแต่เช้าเพื่อส่งผมไปโรงเรียน และพอผมกลับมาถึงบ้านมาทำการบ้าน แม่ก็คอยให้กำลังใจผมเสมอ และที่แม่นอนกับผมทุกๆ คืนครับ
+    <center>
+      <img src="mom2.jpg" width=250 height=250
+      style="border:5px dotted skyblue;">
+      <img src="mom3.jpg" width=250 height=250
+      style="border:5px dotted skyblue;">
+      <img src="mom4.jpg" width=250 height=250
+      style="border:5px dotted skyblue;">
+      <img src="mom5.jpg" width=250 height=250
+      style="border:5px dotted skyblue;">
+    </center>
+  </p>
  </div>
 </html>
