--- a/mom.html
+++ b/mom.html
@@ -36,6 +36,12 @@
       style="border:5px dotted skyblue;">
       <img src="mom5.jpg" width=250 height=250
       style="border:5px dotted skyblue;">
+      <br><br>
+      <h1><mark>บทกลอนมอบให้แม่</mark></h1>
+แม่คือพระคือนางฟ้าเทวดา<br><br>
+ให้กำเนิดเกิดลูกมาเลี้ยงจนใหญ่<br><br>
+ดูแลลูกไม่ให้มีอันตราย<br><br>
+สักการะจากหัวใจของลูกเอย<br><br>
     </center>
   </p>
  </div>
