--- a/mom.html
+++ b/mom.html
@@ -41,7 +41,7 @@
 แม่คือพระคือนางฟ้าเทวดา<br><br>
 ให้กำเนิดเกิดลูกมาเลี้ยงจนใหญ่<br><br>
 ดูแลลูกไม่ให้มีอันตราย<br><br>
-สักการะจากหัวใจของลูกเอย<br><br>
+สักการะจากหัวใจของลูกเอย
     </center>
   </p>
  </div>
