--- a/mom.html
+++ b/mom.html
@@ -29,12 +29,12 @@
   <p>ผมขอขอบคุณแม่ในเรื่องที่ทุกๆ เช้าแม่ของฉันเป็นคนที่ตื่นตั้งแต่เช้าเพื่อส่งผมไปโรงเรียน และพอผมกลับมาถึงบ้านมาทำการบ้าน แม่ก็คอยให้กำลังใจผมเสมอ และที่แม่นอนกับผมทุกๆ คืนครับ
     <center>
       <img src="mom2.jpg" width=250 height=250
-      style="border:5px dotted skyblue;">
+      style="border:5px double skyblue;">
       <img src="mom3.jpg" width=250 height=250
       style="border:5px dotted skyblue;">
       <br>
       <img src="mom4.jpg" width=250 height=250
-      style="border:5px dotted skyblue;">
+      style="border:5px double skyblue;">
       <img src="mom5.jpg" width=250 height=250
       style="border:5px dotted skyblue;">
       <br><br>
