--- a/jatu.html
+++ b/jatu.html
@@ -2,8 +2,16 @@
   <head>
     <meta charset="utf-8">
     <title>จตุรมิตร</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Thasadith:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <style>
-       mark{background: linear-gradient(green 'yellow'pink'blue);color:violet;}
+    body {
+  font-family: "Thasadith", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+       mark{background: linear-gradient(limegreen ,yellow,hotpink,lightskyblue);color:black;}
     </style>
   </head>
   <body background="https://media.istockphoto.com/id/472347896/photo/striped-soccer-field.jpg?s=612x612&w=0&k=20&c=wgeavCCOimF1b5mrv9QNQuuJqs1ERX67pDjPT3yv8j8=">
