--- a/jatu.html
+++ b/jatu.html
@@ -16,4 +16,6 @@
   </head>
   <body background="https://media.istockphoto.com/id/472347896/photo/striped-soccer-field.jpg?s=612x612&w=0&k=20&c=wgeavCCOimF1b5mrv9QNQuuJqs1ERX67pDjPT3yv8j8=">
     <h1><marquee><mark>ยินดีต้อนรับสู่เว็บเพจ จตุรมิตร 4 เหล่า โรงเรียนสวนกุหลาบวิทยาลัย 🌹 โรงเรียนเทพศิรินทร์ 🔰 โรงเรียนอัสสัมชัญ 🍗 โรงเรียนกรุงเทพคริสเตียนวิทยาลัย 🍇</mark></marquee></h1>
+<br>
+<h2><button onclick="document.location='https://www.sk.ac.th/'">โรงเรียนสวนกุหลาบวิทยาลัย 🌹</h2></button>
 </html>
