--- a/jatu.html
+++ b/jatu.html
@@ -16,6 +16,10 @@
       button2{background: linear-gradient(green,yellow);color:blue;}
       button3{background: linear-gradient(red,white);color:blue;}
       button4{background: linear-gradient(darkviolet,gold);color:blue;}
+      header{background: radial-gradient(lightpink,skyblue,white);
+             padding: 30px;
+             text-align:center;
+             border-radius: 10px;}
     </style>
   </head>
   <body background="https://media.istockphoto.com/id/472347896/photo/striped-soccer-field.jpg?s=612x612&w=0&k=20&c=wgeavCCOimF1b5mrv9QNQuuJqs1ERX67pDjPT3yv8j8=">
