--- a/jatu.html
+++ b/jatu.html
@@ -27,13 +27,23 @@
     <h1><marquee><mark>ยินดีต้อนรับสู่เว็บเพจ จตุรมิตร 4 เหล่า โรงเรียนสวนกุหลาบวิทยาลัย 🌹 โรงเรียนเทพศิรินทร์ 🔰 โรงเรียนอัสสัมชัญ 🍗 โรงเรียนกรุงเทพคริสเตียนวิทยาลัย 🍇</mark></marquee></h1>
 <br>
 <h2>
-<button1 onclick="document.location='https://www.sk.ac.th/'">โรงเรียนสวนกุหลาบวิทยาลัย 🌹</button>
+<button1 onclick="document.location='https://www.sk.ac.th/'">โรงเรียนสวนกุหลาบวิทยาลัย 🌹</button1>
 &nbsp;&nbsp;&nbsp;
-<button2 onclick="document.location='https://www.debsirin.ac.th/'">โรงเรียนเทพศิรินทร์ 🔰</button>
+<button2 onclick="document.location='https://www.debsirin.ac.th/'">โรงเรียนเทพศิรินทร์ 🔰</button2>
 &nbsp;&nbsp;&nbsp;
-<button3 onclick="document.location='https://www.assumption.ac.th/'">โรงเรียนอัสสัมชัญ 🍗</button>
+<button3 onclick="document.location='https://www.assumption.ac.th/'">โรงเรียนอัสสัมชัญ 🍗</button3>
 &nbsp;&nbsp;&nbsp;
-<button4 onclick="document.location='https://https://www.bcc.ac.th/2019/'">โรงเรียนกรุงเทพคริสเตียนวิทยาลัย 🍇</button>
+<button4 onclick="document.location='https://https://www.bcc.ac.th/2019/'">โรงเรียนกรุงเทพคริสเตียนวิทยาลัย 🍇</button4>
 </h2>
   </header>
+<br><br>
+<div id="menu" style="background:linear-gradient(limegreen, yellow,hotpink, lightskyblue, darkviolet, gold, red, #FFFFFF)height:400px; width:200px; float:left;">
+  <b>สารบัญ</b>
+  บทนำ <br><br>
+  การแข่งขัน <br><br>
+  อันดับแชมป์ <br><br>
+  จตุรมิตรสามัคคีอาวุโส <br><br>
+  ประเพณีชาวจตุรมิตร <br><br>
+  ผู้จัดทำ
+</div>
 </html>
