--- a/jatu.html
+++ b/jatu.html
@@ -37,13 +37,13 @@
 </h2>
   </header>
 <br><br>
-<div id="menu" style="background:linear-gradient(limegreen, yellow,hotpink, lightskyblue, darkviolet, gold, red, #FFFFFF)height:400px; width:200px; float:left;">
-  <b>สารบัญ</b>
-  บทนำ <br><br>
-  การแข่งขัน <br><br>
-  อันดับแชมป์ <br><br>
-  จตุรมิตรสามัคคีอาวุโส <br><br>
-  ประเพณีชาวจตุรมิตร <br><br>
-  ผู้จัดทำ
+<div id="menu" style="background:linear-gradient(limegreen, yellow,hotpink, lightskyblue, darkviolet, gold, red, #FFFFFF);height:400px; width:200px; float:left;">
+  <b>🔎สารบัญ⚽</b><br><br>
+ ⚽ บทนำ <br><br>
+ ⚽ การแข่งขัน <br><br>
+ ⚽ อันดับแชมป์ <br><br>
+ ⚽ จตุรมิตรสามัคคีอาวุโส <br><br>
+ ⚽ ประเพณีชาวจตุรมิตร <br><br>
+ 😎 ผู้จัดทำ 😁
 </div>
 </html>
