--- a/jatu.html
+++ b/jatu.html
@@ -10,7 +10,7 @@
   font-family: "Thasadith", sans-serif;
   font-weight: 400;
   font-style: normal;
-}
+  cursur:url("jatu.png"),auto; height:100vh;}
        mark{background: linear-gradient(limegreen ,yellow,hotpink,lightskyblue);color:black;}
       button1{background: linear-gradient(hotpink,skyblue);color:blue;}
       button2{background: linear-gradient(green,yellow);color:blue;}
