--- a/intro.html
+++ b/intro.html
@@ -20,6 +20,14 @@
              padding: 30px;
              text-align:center;
              border-radius: 10px;}
+      section{background: linear-gradient(hotpink,skyblue,white);
+             padding: 15px;;
+             margin: 20px auto;
+             width: 70%;
+             border-radius:10px;}
+      p{text-indent: 2em;}
+
+      .zoom:hover{tranform: scale(1.5); cursor:pointer;}
     </style>
   </head>
   <body background="https://media.istockphoto.com/id/472347896/photo/striped-soccer-field.jpg?s=612x612&w=0&k=20&c=wgeavCCOimF1b5mrv9QNQuuJqs1ERX67pDjPT3yv8j8=">
