--- a/history.html
+++ b/history.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>บทนำ</title>
+    <title>ประวัติ</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Thasadith:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -20,12 +20,13 @@
              padding: 30px;
              text-align:center;
              border-radius: 10px;}
-      section{background: linear-gradient(hotpink,skyblue,white);
+      section{background: linear-gradient(limegreen,yellow,white);
              padding: 15px;;
              margin: 20px auto;
              width: 70%;
              border-radius:10px;}
       p{text-indent: 2em;}.zoom:hover{transform: scale(1.5); cursor:pointer;}
+      
     </style>
   </head>
   <body background="https://media.istockphoto.com/id/472347896/photo/striped-soccer-field.jpg?s=612x612&w=0&k=20&c=wgeavCCOimF1b5mrv9QNQuuJqs1ERX67pDjPT3yv8j8=">
