--- a/history.html
+++ b/history.html
@@ -36,6 +36,15 @@
         75% {box-shadow: 0 0 20px darkviolet;}
         100% {box-shadow: 0 0 20px red;}
       }
+
+      .blink-bg{
+        animation: blinkbg 1s infinite alternate;
+        padding: 3px 6px;
+      }
+      @keyframes blinkbg{
+        0% {background: yellow;}
+        100% {background: orange;}
+      }
     </style>
   </head>
   <body background="https://media.istockphoto.com/id/472347896/photo/striped-soccer-field.jpg?s=612x612&w=0&k=20&c=wgeavCCOimF1b5mrv9QNQuuJqs1ERX67pDjPT3yv8j8=">
