--- a/history.html
+++ b/history.html
@@ -87,7 +87,7 @@
     <img src="" width="250" height="250" class="zoom">
   </center>
   <br>
-  <hr style="height:8px; width:80%; background: linear-gradient(to right,Limegreen,Yellow,Hotpink,Lightskyblue,Darkviolet,Gold,Red,White)">
+  <hr style="height:8px; width:80%; background: linear-gradient(to right,Limegreen,Yellow,Hotpink,Lightskyblue,Darkviolet,Gold,Red,White);">
 </section>
 
 
