--- a/history.html
+++ b/history.html
@@ -89,12 +89,23 @@
   <br>
   <hr style="height:8px; width:80%; background: linear-gradient(to right,Limegreen,Yellow,Hotpink,Lightskyblue,Darkviolet,Gold,Red,White);">
   <br><br>
+  <center>
   <span class="blink-bg">ภาพบรรยากาศการแข่งขันฟุตบองจตุรมิตรครั้งที่ 31</span>
   <br><br>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR89ovgKpMiXcQ7OkARtcQ_ceLQS_hUqdJbRg&s" width="250" height="250" class="zoom">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQeEizyFFOIdiE42DUOk0fKkbUwNfssg9hYEA&s" width="250" height="250" class="zoom">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDpJ0NFdufiBaHMI-lFjFZTMhAYphUJwQ1ow&s" width="250" height="250" class="zoom">
     <img src="https://image.bangkokbiznews.com/uploads/images/contents/w1024/2025/11/J8S0HJRJTw4hm4mpjJNW.webp?x-image-process=style/lg-webp" width="250" height="250" class="zoom">
+  </center>
+  <br><br>
+  <span class="blink-bg">ภาพบรรยากาศการเชียร์และแปรอักษร</span>
+  <br><br>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSbMzY6D3UiTKznDXHBWGrXBimO0yEz4nzIA&s" width="250" height="250" class="zoom">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-vQqGg2vtsgoJ8tUqmjv2NAYl4zPgPiMv0A&s" width="250" height="250" class="zoom">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMCzm5MYTQ-efIjmJ3TC4duHowlouYFYfO8g&s" width="250" height="250" class="zoom">
+    <img src="https://s.isanook.com/ca/0/ud/279/1398261/75462246_2237160289746194_821.jpg?ip/resize/w728/q80/jpg" width="250" height="250" class="zoom">
+  <br><br>
+  <hr style="height:8px; width:80%; background: linear-gradient(to right,Limegreen,Yellow,Hotpink,Lightskyblue,Darkviolet,Gold,Red,White);">
 </section>
   </body>
 </html>
