--- a/history.html
+++ b/history.html
@@ -111,7 +111,19 @@
   <br><br>
   <hr style="height:8px; width:80%; background: linear-gradient(to right,Limegreen,Yellow,Hotpink,Lightskyblue,Darkviolet,Gold,Red,White);">
   <br><br>
-<p></p>
+<p>แม้ว่าความสามัคคีจะเป็นหัวใจสำคัญของการแข่งขันมาโดยตลอด (จตุรมิตร มาจากภาษาสันสกฤต จตุร + มิตร แปลว่า "สี่สหาย" และ สามัคคี (จากภาษาบาลีว่า สามัคคี) แปลว่า "ความกลมเกลียว" หรือ "ความกลมเกลียว") คำว่า จตุรมิตร มักถูกใช้เป็นวลีติดปากเพื่อเรียกนักเรียนหรือศิษย์เก่าของโรงเรียนที่เข้าร่วมโครงการทั้งสี่แห่ง การแข่งขันระหว่างโรงเรียนได้เพิ่มความรุนแรงขึ้น โดยเฉพาะอย่างยิ่งการแข่งขันทีมคู่ปรับระหว่างสวนกุหลาบวิทยาลัยกับเทพศิรินทร์ และอัสสัมชัญกับกรุงเทพคริสเตียนวิทยาลัย สิ่งนี้นำไปสู่ความรุนแรงระหว่างโรงเรียนหลายกรณีในช่วงหลายสัปดาห์ของการแข่งขัน ขอบเขตของปัญหาคือต้องมีการแยกผู้ชมอย่างเข้มงวดและการบังคับใช้ความปลอดภัยในระหว่างการแข่งขัน</p>
+  <br><br>
+  <center>
+  <span class="blink-bg">ผลการแข่งขันฟุตบอลจตุรมิตร 31</span>
+  <br><br>
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSk83ChNdJ1iF8ACwW8pjWrp1nCO7twgAEfXg&s" width="250" height="250" class="zoom">
+  <br><br>
+  <span class="blink-bg">คลิปวันจตุรมิตร 31</span>
+  <iframe width="500" height="300" src="https://www.youtube.com/embed/GCEuThpjQH0" title="Highlights: Thepsirin 2-0 Bangkok Christian College | 31st Four-National Friendship Football Tour..." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <br><br>
+  <iframe width="500" height="300" src="https://www.youtube.com/embed/RjwLGfJ_pf8" title="Highlights: Thepsirin 3-1 Suankularb Wittayalai | 31st Four-National Friendship Football Tournament" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <hr style="height:8px; width:80%; background: linear-gradient(to right,Limegreen,Yellow,Hotpink,Lightskyblue,Darkviolet,Gold,Red,White);">
+  </center>
 </section>
   </body>
 </html>
