--- a/history.html
+++ b/history.html
@@ -103,9 +103,9 @@
   <center>
   <span class="blink-bg">ภาพบรรยากาศการเชียร์และแปรอักษร</span>
   <br><br>
-    <img src="https://scontent.fbkk11-1.fna.fbcdn.net/v/t39.30808-6/581941837_122187187754492775_8600793033112173325_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=107&ccb=1-7&_nc_sid=127cfc&_nc_ohc=A1kE1tG-5PAQ7kNvwEZScEP&_nc_oc=AdllMrjNTz-RcAv5PYmKiMpb9Gx-0ki2LTAFbpJZndnWANswIjKR_BUCcZ6evhhtQpg&_nc_zt=23&_nc_ht=scontent.fbkk11-1.fna&_nc_gid=uMd-D4lpshPmSuTcE0D1-w&oh=00_AfgJ6WTmW0uIT0puvmiMb3OpXB8hPz1s5oHKNMZBmqXsbw&oe=692F0738" width="250" height="250" class="zoom">
-    <img src="https://scontent.fbkk11-1.fna.fbcdn.net/v/t39.30808-6/583929761_1268271512006885_6142029656425910968_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=f727a1&_nc_ohc=O-fQ1oxRuuwQ7kNvwGAxzOT&_nc_oc=AdmqmtaZu2iqIgE24gPDgXG21phOxVgDqnyt0xy4Ztml6uPXW9vngi7UNeiH5r20iTM&_nc_zt=23&_nc_ht=scontent.fbkk11-1.fna&_nc_gid=j3oXZn-f3n-ZaEBn_U6DpA&oh=00_AfgI3Du3w4zPIgy5X_TXalAYkVyMORZRUECm0jIPBpOBCg&oe=692F02BC" width="250" height="250" class="zoom">
-    <img src="https://scontent.fbkk11-1.fna.fbcdn.net/v/t39.30808-6/583929720_1268271315340238_980749671384126343_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=f727a1&_nc_ohc=9wHUBJnIG4sQ7kNvwE3UdmU&_nc_oc=Adlzl5AyQi1ghsqjv_rNuQp1Fdv_raEzYV5M-Uhse2_j9Aypl6rntmKGs_PET3olpyg&_nc_zt=23&_nc_ht=scontent.fbkk11-1.fna&_nc_gid=QEMdywnde25eiHvt5vmk0Q&oh=00_AfgNzqgoomkJ9MN7fv8jbvtBtvi4LWyqbiaWYV8Uw_iBTQ&oe=692EE7C2" width="250" height="250" class="zoom">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGSZt6UyetO2X3Kpcsf2WM-IfMmepFn7jf9g&s" width="250" height="250" class="zoom">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMskEnEw5kRs6VWyf1OagSpfZoa_zBNQUidw&s" width="250" height="250" class="zoom">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTP_F6SqWVlChQ3ldzUFhMfQ9xoYk9lDSAjqQ&s" width="250" height="250" class="zoom">
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS49kgzB8yfNylejAXPGpWDtKoLflqGkUtGzA&s" width="250" height="250" class="zoom">
   </center>
   <br><br>
