--- a/table.html
+++ b/table.html
@@ -74,7 +74,10 @@
     <section>
       <center><h1><mark>ผลการแข่งขันจตุรมิตรสามัคคี
       </center></h1></mark>
+<p><span class="blink-bg">
+การแข่งขันฟุตบอลประเพณีจตุรมิตรสามัคคีมีขึ้นในปี พ.ศ. 2507 เป็นปีแรก โดยลำดับการแข่งขันและการเป็นเจ้าภาพ ดังนี้
+</p></span>
+<br><br>
     </section>
-    
   </body>
 </html>
