--- a/table.html
+++ b/table.html
@@ -78,6 +78,16 @@
 การแข่งขันฟุตบอลประเพณีจตุรมิตรสามัคคีมีขึ้นในปี พ.ศ. 2507 เป็นปีแรก โดยลำดับการแข่งขันและการเป็นเจ้าภาพ ดังนี้
 </p></span>
 <br><br>
+   
+<table border="5" cellpadding="10"
+style="width:100%; background-color:red">
+<tr syle="text-align:center;background-color:#FFFACD;">
+<td>ครั้งที่</td>
+<td>วันแข่ง</td>
+<td>เจ้าภาพ</td>
+<td>ผู้ชนะอันดับหนึ่ง</td>
+</tr>
+</table>
     </section>
   </body>
 </html>
