--- a/table.html
+++ b/table.html
@@ -79,8 +79,15 @@
 </p></span>
 <br><br>
    
-<table border="1" cellpadding="10"
-style="width:100%; background-color:red">
+<table border="3" cellpadding="10" style="width:100%; background-color:red">
+<tr syle="text-align:center;background-color:#FFFACD;">
+<td>ครั้งที่</td>
+<td>วันแข่ง</td>
+<td>เจ้าภาพ</td>
+<td>ผู้ชนะอันดับหนึ่ง</td>
+</tr>
+
+<table border="3" cellpadding="10" style="width:100%; background-color:red">
 <tr syle="text-align:center;background-color:#FFFACD;">
 <td>ครั้งที่</td>
 <td>วันแข่ง</td>
