--- a/table.html
+++ b/table.html
@@ -87,13 +87,16 @@
 <td>ผู้ชนะอันดับหนึ่ง</td>
 </tr>
 
-<table border="3" cellpadding="10" style="width:100%; background-color:red">
-<tr syle="text-align:center;background-color:#FFFACD;">
-<td>ครั้งที่</td>
-<td>วันแข่ง</td>
-<td>เจ้าภาพ</td>
-<td>ผู้ชนะอันดับหนึ่ง</td>
+<tr syle="text-align:center;background-color:white;">
+<td>1</td>
+<td>16 ตุลาคม - 18 พฤศจิกายน 2507</td>
+<td style="background:linear-gradient(to right,pink,skyblue);"
+</td>
+<td>สวนกุหลาบวิทยาลัย</td>
 </tr>
+
+
+
 </table>
     </section>
   </body>
