--- a/table.html
+++ b/table.html
@@ -90,7 +90,8 @@
 <tr syle="text-align:center;background-color:white;">
 <td>1</td>
 <td>16 ตุลาคม - 18 พฤศจิกายน 2507</td>
-<td style="background:linear-gradient(to right,pink,skyblue);"
+<td style="background:linear-gradient(to right,pink,skyblue);
+  สวนกุหลาบวิทยาลัย"
 </td>
 <td>สวนกุหลาบวิทยาลัย</td>
 </tr>
