--- a/table.html
+++ b/table.html
@@ -78,8 +78,8 @@
 การแข่งขันฟุตบอลประเพณีจตุรมิตรสามัคคีมีขึ้นในปี พ.ศ. 2507 เป็นปีแรก โดยลำดับการแข่งขันและการเป็นเจ้าภาพ ดังนี้
 </p></span>
 <br><br>
-   
-<table border="3" cellpadding="10" style="width:100%; background-color:red">
+<table border="1" cellpadding="10" 
+style="width:100%; background-color:red">
 <tr syle="text-align:center;background-color:#FFFACD;">
 <td>ครั้งที่</td>
 <td>วันแข่ง</td>
@@ -88,8 +88,8 @@
 </tr>
 
 <tr syle="text-align:center;background-color:white;">
-<td>2</td>
-<td>19 ตุลาคม – 13 พฤศจิกายน 2508</td>
+<td>1</td>
+<td>16 ตุลาคม – 18 พฤศจิกายน 2507</td>
 <td style="background:linear-gradient(to right,pink,skyblue);">
   สวนกุหลาบวิทยาลัย
 </td>
@@ -97,8 +97,8 @@
 </tr>
 
 <tr syle="text-align:center;background-color:white;">
-<td>1</td>
-<td>16 ตุลาคม - 18 พฤศจิกายน 2507</td>
+<td>2</td>
+<td>19 ตุลาคม – 13 พฤศจิกายน 2508</td>
 <td style="background:linear-gradient(to right,green,yellow);">
   เทพศิรินทร์
 </td>
