--- a/table.html
+++ b/table.html
@@ -80,14 +80,15 @@
 <br><br>
 <table border="1" cellpadding="10" 
 style="width:100%; background-color:red">
-<tr syle="text-align:center;background-color:#FFFACD;">
+  
+<tr style="text-align:center; background-color:#FFFACD;">
 <td>ครั้งที่</td>
 <td>วันแข่ง</td>
 <td>เจ้าภาพ</td>
 <td>ผู้ชนะอันดับหนึ่ง</td>
 </tr>
 
-<tr syle="text-align:center;background-color:white;">
+<tr style="text-align:center;background-color:white;">
 <td>1</td>
 <td>16 ตุลาคม – 18 พฤศจิกายน 2507</td>
 <td style="background:linear-gradient(to right,pink,skyblue);">
@@ -96,7 +97,7 @@ style="width:100%; background-color:red">
 <td>สวนกุหลาบวิทยาลัย</td>
 </tr>
 
-<tr syle="text-align:center;background-color:white;">
+<tr style="text-align:center;background-color:white;">
 <td>2</td>
 <td>19 ตุลาคม – 13 พฤศจิกายน 2508</td>
 <td style="background:linear-gradient(to right,green,yellow);">
