--- a/table.html
+++ b/table.html
@@ -208,7 +208,7 @@ style="width:100%; background-color:red">
 <tr style="text-align:center;background-color:white;">
 <td>14</td>
 <td>19–26 ธันวาคม 2530</td>
-<td style="background:linear-gradient(to right,green,yellow;">
+<td style="background:linear-gradient(to right,green,yellow);">
   เทพศิรินทร์
 </td>
 <td>สวนกุหลาบวิทยาลัย</td>
@@ -217,7 +217,7 @@ style="width:100%; background-color:red">
 <tr style="text-align:center;background-color:white;">
 <td>15</td>
 <td>15–28 ธันวาคม 2532</td>
-<td style="background:linear-gradient(to right,red,white;">
+<td style="background:linear-gradient(to right,red,white);">
   อัสสัมชัญ
 </td>
 <td>อัสสัมชัญ</td>
@@ -226,7 +226,7 @@ style="width:100%; background-color:red">
 <tr style="text-align:center;background-color:white;">
 <td>16</td>
 <td>24–28 ธันวาคม 2534</td>
-<td style="background:linear-gradient(to right,violet,gold;">
+<td style="background:linear-gradient(to right,violet,gold);">
   กรุงเทพคริสเตียนวิทยาลัย
 </td>
 <td>กรุงเทพคริสเตียนวิทยาลัย</td>
@@ -235,7 +235,7 @@ style="width:100%; background-color:red">
 <tr style="text-align:center;background-color:white;">
 <td>17</td>
 <td>18–28 ธันวาคม 2536</td>
-<td style="background:linear-gradient(to right,pink,skyblue;">
+<td style="background:linear-gradient(to right,pink,skyblue);">
   	สวนกุหลาบวิทยาลัย
 </td>
 <td>อัสสัมชัญ</td>
@@ -244,7 +244,7 @@ style="width:100%; background-color:red">
 <tr style="text-align:center;background-color:white;">
 <td>18</td>
 <td>25 พฤศจิกายน – 2 ธันวาคม 2538</td>
-<td style="background:linear-gradient(to right,green,yellow;">
+<td style="background:linear-gradient(to right,green,yellow);">
   	เทพศิรินทร์
 </td>
 <td>สวนกุหลาบวิทยาลัย ร่วมกับ อัสสัมชัญ</td>
@@ -253,7 +253,7 @@ style="width:100%; background-color:red">
 <tr style="text-align:center;background-color:white;">
 <td>19</td>
 <td>13–20 ธันวาคม 2540</td>
-<td style="background:linear-gradient(to right,red,white;">
+<td style="background:linear-gradient(to right,red,white);">
   	อัสสัมชัญ
 </td>
 <td>เทพศิรินทร์ ร่วมกับ กรุงเทพคริสเตียนวิทยาลัย</td>
@@ -262,7 +262,7 @@ style="width:100%; background-color:red">
 <tr style="text-align:center;background-color:white;">
 <td>20</td>
 <td>11–19 ธันวาคม 2542</td>
-<td style="background:linear-gradient(to right,violet,gold;">
+<td style="background:linear-gradient(to right,violet,gold);">
   	กรุงเทพคริสเตียนวิทยาลัย
 </td>
 <td>เทพศิรินทร์ ร่วมกับ กรุงเทพคริสเตียนวิทยาลัย</td>
@@ -271,7 +271,7 @@ style="width:100%; background-color:red">
 <tr style="text-align:center;background-color:white;">
 <td>21</td>
 <td>17–24 พฤศจิกายน 2544</td>
-<td style="background:linear-gradient(to right,pink,skyblue;">
+<td style="background:linear-gradient(to right,pink,skyblue);">
   	สวนกุหลาบวิทยาลัย
 </td>
 <td>สวนกุหลาบวิทยาลัย ร่วมกับ กรุงเทพคริสเตียนวิทยาลัย</td>
@@ -280,7 +280,7 @@ style="width:100%; background-color:red">
 <tr style="text-align:center;background-color:white;">
 <td>22</td>
 <td>12 มกราคม – 18 มกราคม 2547</td>
-<td style="background:linear-gradient(to right,green,yellow;">
+<td style="background:linear-gradient(to right,green,yellow);">
   	เทพศิรินทร์
 </td>
 <td>กรุงเทพคริสเตียนวิทยาลัย</td>
@@ -289,7 +289,7 @@ style="width:100%; background-color:red">
 <tr style="text-align:center;background-color:white;">
 <td>23</td>
 <td>26 พฤศจิกายน – 3 ธันวาคม 2548</td>
-<td style="background:linear-gradient(to right,red,white;">
+<td style="background:linear-gradient(to right,red,white);">
   	อัสสัมชัญ
 </td>
 <td>อัสสัมชัญ ร่วมกับ กรุงเทพคริสเตียนวิทยาลัย</td>
@@ -297,7 +297,7 @@ style="width:100%; background-color:red">
 <tr style="text-align:center;background-color:white;">
 <td>24</td>
 <td>17–24 พฤศจิกายน 2550</td>
-<td style="background:linear-gradient(to right,violet,gold;">
+<td style="background:linear-gradient(to right,violet,gold);">
   	กรุงเทพคริสเตียนวิทยาลัย
 </td>
 <td>อัสสัมชัญ</td>
@@ -306,7 +306,7 @@ style="width:100%; background-color:red">
 <tr style="text-align:center;background-color:white;">
 <td>25</td>
 <td>21–28 พฤศจิกายน 2552</td>
-<td style="background:linear-gradient(to right,pink,skyblue;">
+<td style="background:linear-gradient(to right,pink,skyblue);">
   	สวนกุหลาบวิทยาลัย
 </td>
 <td>กรุงเทพคริสเตียนวิทยาลัย</td>
@@ -315,7 +315,7 @@ style="width:100%; background-color:red">
 <tr style="text-align:center;background-color:white;">
 <td>26</td>
 <td>10–17 พฤศจิกายน 2555</td>
-<td style="background:linear-gradient(to right,green,yellow;">
+<td style="background:linear-gradient(to right,green,yellow);">
   	เทพศิรินทร์
 </td>
 <td>สวนกุหลาบวิทยาลัย ร่วมกับ กรุงเทพคริสเตียนวิทยาลัย</td>
@@ -324,7 +324,7 @@ style="width:100%; background-color:red">
 <tr style="text-align:center;background-color:white;">
 <td>27</td>
 <td>15– 22 พฤศจิกายน 2557</td>
-<td style="background:linear-gradient(to right,red,white;">
+<td style="background:linear-gradient(to right,red,white);">
   	อัสสัมชัญ
 </td>
 <td>อัสสัมชัญ ร่วมกับ กรุงเทพคริสเตียนวิทยาลัย</td>
@@ -333,7 +333,7 @@ style="width:100%; background-color:red">
 <tr style="text-align:center;background-color:white;">
 <td>28</td>
 <td>11–18 พฤศจิกายน 2560</td>
-<td style="background:linear-gradient(to right,violet,gold;">
+<td style="background:linear-gradient(to right,violet,gold);">
   	กรุงเทพคริสเตียนวิทยาลัย
 </td>
 <td>อัสสัมชัญ</td>
@@ -342,7 +342,7 @@ style="width:100%; background-color:red">
 <tr style="text-align:center;background-color:white;">
 <td>29</td>
 <td>9–16 พฤศจิกายน 2562</td>
-<td style="background:linear-gradient(to right,pink,skyblue;">
+<td style="background:linear-gradient(to right,pink,skyblue);">
   	สวนกุหลาบวิทยาลัย
 </td>
 <td>เทพศิรินทร์</td>
@@ -351,7 +351,7 @@ style="width:100%; background-color:red">
 <tr style="text-align:center;background-color:white;">
 <td>30</td>
 <td>11–18 พฤศจิกายน 2566</td>
-<td style="background:linear-gradient(to right,green,yellow;">
+<td style="background:linear-gradient(to right,green,yellow);">
   	เทพศิรินทร์
 </td>
 <td>สวนกุหลาบวิทยาลัย ร่วมกับ กรุงเทพคริสเตียนวิทยาลัย</td>
@@ -360,7 +360,7 @@ style="width:100%; background-color:red">
 <tr style="text-align:center;background-color:white;">
 <td>31</td>
 <td>15–22 พฤศจิกายน 2568</td>
-<td style="background:linear-gradient(to right,red,white;">
+<td style="background:linear-gradient(to right,red,white);">
   	อัสสัมชัญ
 </td>
 <td>เทพศิรินทร์​</td>
