--- a/table.html
+++ b/table.html
@@ -148,7 +148,7 @@ style="width:100%; background-color:red">
 <td style="background:linear-gradient(to right,red,white);">
   อัสสัมชัญ
 </td>
-<td>ไม่มีการชิงชนะเลิศ[</td>
+<td>ไม่มีการชิงชนะเลิศ</td>
 </tr>
 
 <tr style="text-align:center;background-color:white;">
@@ -157,7 +157,7 @@ style="width:100%; background-color:red">
 <td style="background:linear-gradient(to right,red,white);">
   อัสสัมชัญ
 </td>
-<td>เทพศิรินทร์[</td>
+<td>เทพศิรินทร์</td>
 </tr>
 
 <tr style="text-align:center;background-color:white;">
