--- a/history.html
+++ b/history.html
@@ -64,12 +64,14 @@
 <br><br>
 <div id="menu" style="background:linear-gradient(limegreen, yellow,hotpink, lightskyblue, darkviolet, gold, red, #FFFFFF);height:400px; width:200px; float:left;">
   <b>🔎สารบัญ⚽</b><br><br>
- ⚽ บทนำ <br><br>
- ⚽ การแข่งขัน <br><br>
+ ⚽ <a href="https://punnapat13.github.io/punnapat.github.io/jatu.html">หน้าแรก </a><br><br>
+ ⚽ <a href="https://punnapat13.github.io/punnapat.github.io/intro.html">บทนำ </a><br><br>
+ ⚽ <a href="https://punnapat13.github.io/punnapat.github.io/history.html">ประวัติ </a><br><br>
+ ⚽ <a href="https://punnapat13.github.io/punnapat.github.io/table.html">การแข่งขัน </a><br><br>
  ⚽ อันดับแชมป์ <br><br>
  ⚽ จตุรมิตรสามัคคีอาวุโส <br><br>
  ⚽ ประเพณีชาวจตุรมิตร <br><br>
- 😎 ผู้จัดทำ 😁
+ 😎 ด.ช.ปุณณพัสณ์ เอี่ยมชื่น ม.212 เลขที่ 13 😁
 </div>
 <section>
   <center>
