--- a/jatu.html
+++ b/jatu.html
@@ -33,7 +33,7 @@
 &nbsp;&nbsp;&nbsp;
 <button3 onclick="document.location='https://www.assumption.ac.th/'">โรงเรียนอัสสัมชัญ 🍗</button3>
 &nbsp;&nbsp;&nbsp;
-<button4 onclick="document.location='https://https://www.bcc.ac.th/2019/'">โรงเรียนกรุงเทพคริสเตียนวิทยาลัย 🍇</button4>
+<button4 onclick="document.location='https://www.bcc.ac.th/2019/'">โรงเรียนกรุงเทพคริสเตียนวิทยาลัย 🍇</button4>
 </h2>
   </header>
 <br><br>
