--- a/jatu.html
+++ b/jatu.html
@@ -27,7 +27,7 @@
     <h1><marquee><mark>ยินดีต้อนรับสู่เว็บเพจ จตุรมิตร 4 เหล่า โรงเรียนสวนกุหลาบวิทยาลัย 🌹 โรงเรียนเทพศิรินทร์ 🔰 โรงเรียนอัสสัมชัญ 🍗 โรงเรียนกรุงเทพคริสเตียนวิทยาลัย 🍇</mark></marquee></h1>
 <br>
 <h2>
-<button1 onclick="document.location='https://www.sk.ac.th/'">โรงเรียนสวนกุหลาบวิทยาลัย 🌹</button1>
+<button1 onclick="document.location='http://www.sk.ac.th/'">โรงเรียนสวนกุหลาบวิทยาลัย 🌹</button1>
 &nbsp;&nbsp;&nbsp;
 <button2 onclick="document.location='https://www.debsirin.ac.th/'">โรงเรียนเทพศิรินทร์ 🔰</button2>
 &nbsp;&nbsp;&nbsp;
