--- a/newyear.html
+++ b/newyear.html
@@ -1,1 +1,18 @@
-
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>วันปีใหม่</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Thasadith:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <style>
+    body {
+  font-family: "Thasadith", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+      mark{background: linear-gradient(ัhotpink, skyblue);color:black;}
+    </style>
+  </head>
+  <body background="https://img.freepik.com/premium-photo/abstract-shining-blue-celebrate-background-design_1128603-37670.jpg?semt=ais_user_personalization&w=740&q=80">
+  <center>
+  <h1><mark>สวัสดีวันปีใหม่</mark></h1>
