--- a/newyear.html
+++ b/newyear.html
@@ -10,9 +10,18 @@
   font-family: "Thasadith", sans-serif;
   font-weight: 400;
   font-style: normal;
-      mark{background: linear-gradient(ัhotpink, skyblue);color:black;}
+      mark{background: linear-gradient(white ,yellow,red);color:black;}
     </style>
   </head>
-  <body background="https://img.freepik.com/premium-photo/abstract-shining-blue-celebrate-background-design_1128603-37670.jpg?semt=ais_user_personalization&w=740&q=80">
+  <body background="https://media.istockphoto.com/id/1087097456/photo/gold-vintage-fireworks-and-bokeh-in-new-year-eve-and-copy-space-abstract-background-holiday.jpg?s=612x612&w=0&k=20&c=QLAQjgXoit8WEWXJo_tlyy3XQVsoy5adoLcaW5JjjMA=">
   <center>
-  <h1><mark>สวัสดีวันปีใหม่</mark></h1>
+  <h1><mark>สวัสดีวันปีใหม่ 2026</mark></h1>
+    <br><br>
+  <h2>วันขึ้นปีใหม่ วันสิ้นปี 31 ธันวาคม - 1 มกราคม</h2>
+    <br><br>
+  </center>
+  <h1><mark>ความหมายของวันสิ้นปี</mark></h1>
+  <p><h4>วันสิ้นปี (New Year's Eve) คือวันที่ 31 ธันวาคม ซึ่งเป็นวันสุดท้ายของปีตามปฏิทินสากล (Gregorian Calendar) มีความหมายสำคัญคือเป็น จุดเปลี่ยนจากการสิ้นสุดของปีเก่าไปสู่การเริ่มต้นปีใหม่ เป็นช่วงเวลาแห่งการทบทวนเรื่องราวที่ผ่านมา วางแผนสำหรับอนาคต และเฉลิมฉลองด้วยการนับถอยหลัง (Countdown) สู่เที่ยงคืนวันขึ้นปีใหม่ทั่วโลก มักมีการจุดพลุและจัดกิจกรรมสังสรรค์ พร้อมทั้งการทำบุญเพื่อความเป็นสิริมงคลในประเทศไทยด้วย</h4></p>
+  <br><br>
+  <h1><mark>ความสำคัญของวันปีใหม่</mark></h1>
+  <p><h4>วันปีใหม่ (1 มกราคม) มีความสำคัญในฐานะการเริ่มต้นนับปีปฏิทินใหม่ที่สอดคล้องกับสากล เป็นช่วงเวลาของการส่งท้ายปีเก่าต้อนรับปีใหม่ เพื่อทบทวนเป้าหมายชีวิต เริ่มต้นสิ่งดีๆ ทำบุญตักบาตร และเป็นช่วงเวลาแห่งความสุขที่ครอบครัวจะได้พบปะกันพร้อมหน้า รวมถึงกระตุ้นเศรษฐกิจจากการท่องเที่ยวและการเฉลิมฉลอง</h4></p>
