--- a/newyear.html
+++ b/newyear.html
@@ -11,6 +11,25 @@
   font-weight: 400;
   font-style: normal;
       mark{background: linear-gradient(white ,yellow,red);color:black;}
+p{text-indent: 2em;}.zoom:hover{transform: scale(1.5); cursor:pointer;}
+
+      img:hover{animation:glowcolors 1.2s infinite alternate;}
+      @keyframes glowcolors{
+        0% {box-shadow: 0 0 20px hotpink;}
+        25% {box-shadow: 0 0 20px skyblue;}
+        50% {box-shadow: 0 0 20px gold;}
+        75% {box-shadow: 0 0 20px darkviolet;}
+        100% {box-shadow: 0 0 20px red;}
+      }
+
+      .blink-bg{
+        animation: blinkbg 1s infinite alternate;
+        padding: 3px 6px;
+      }
+      @keyframes blinkbg{
+        0% {background: yellow;}
+        100% {background: orange;}
+      }
     </style>
   </head>
   <body background="https://media.istockphoto.com/id/1087097456/photo/gold-vintage-fireworks-and-bokeh-in-new-year-eve-and-copy-space-abstract-background-holiday.jpg?s=612x612&w=0&k=20&c=QLAQjgXoit8WEWXJo_tlyy3XQVsoy5adoLcaW5JjjMA=">
@@ -23,5 +42,8 @@
   <h1><mark>ความหมายของวันสิ้นปี</mark></h1>
   <p><h4>วันสิ้นปี (New Year's Eve) คือวันที่ 31 ธันวาคม ซึ่งเป็นวันสุดท้ายของปีตามปฏิทินสากล (Gregorian Calendar) มีความหมายสำคัญคือเป็น จุดเปลี่ยนจากการสิ้นสุดของปีเก่าไปสู่การเริ่มต้นปีใหม่ เป็นช่วงเวลาแห่งการทบทวนเรื่องราวที่ผ่านมา วางแผนสำหรับอนาคต และเฉลิมฉลองด้วยการนับถอยหลัง (Countdown) สู่เที่ยงคืนวันขึ้นปีใหม่ทั่วโลก มักมีการจุดพลุและจัดกิจกรรมสังสรรค์ พร้อมทั้งการทำบุญเพื่อความเป็นสิริมงคลในประเทศไทยด้วย</h4></p>
   <br><br>
+  <center>
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWq-oEzyVOnYsB_v4Ad0-eO9TWk43vjGnD4Q&s" width="250" height="250" class="zoom">
+  </center>
   <h1><mark>ความสำคัญของวันปีใหม่</mark></h1>
   <p><h4>วันปีใหม่ (1 มกราคม) มีความสำคัญในฐานะการเริ่มต้นนับปีปฏิทินใหม่ที่สอดคล้องกับสากล เป็นช่วงเวลาของการส่งท้ายปีเก่าต้อนรับปีใหม่ เพื่อทบทวนเป้าหมายชีวิต เริ่มต้นสิ่งดีๆ ทำบุญตักบาตร และเป็นช่วงเวลาแห่งความสุขที่ครอบครัวจะได้พบปะกันพร้อมหน้า รวมถึงกระตุ้นเศรษฐกิจจากการท่องเที่ยวและการเฉลิมฉลอง</h4></p>
