--- a/dad.html
+++ b/dad.html
@@ -10,7 +10,7 @@
   font-weight: 400;
   font-style: normal;
   cursor:url("jatu.png"),auto; height:100vh;}
-       mark{background: linear-gradient(limegreen ,yellow,hotpink,lightskyblue);color:black;}
+       mark{background: linear-gradient(orange,yellow,white);color:black;}
       button1{background: linear-gradient(hotpink,skyblue);color:blue;}
       button2{background: linear-gradient(green,yellow);color:blue;}
       button3{background: linear-gradient(red,white);color:blue;}
@@ -25,4 +25,10 @@
 <header>
 <h1><marquee><mark>สุขสันต์วันพ่อ 5 ธันวาคม 2568</mark></marquee></h1>
 </header>
+<br><br>
+
+<br><br>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-OvIbyJ8JD9_8uy-35Xbp1Cr_gaf5vi0mwA&s" width=400 height=300>
+<br><br>
+      
 </html>
