--- a/dad.html
+++ b/dad.html
@@ -26,7 +26,8 @@
 <h1><marquee><mark>สุขสันต์วันพ่อ 5 ธันวาคม 2568</mark></marquee></h1>
 </header>
 <br><br>
-
+<video width="500" height="400" controls="controls">
+<source src="Dad.mp4">
 <br><br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-OvIbyJ8JD9_8uy-35Xbp1Cr_gaf5vi0mwA&s" width=400 height=300>
 <br><br>
