--- a/dad.html
+++ b/dad.html
@@ -15,7 +15,7 @@
       button2{background: linear-gradient(green,yellow);color:blue;}
       button3{background: linear-gradient(red,white);color:blue;}
       button4{background: linear-gradient(darkviolet,gold);color:blue;}
-      header{background: radial-gradient(lightpink,skyblue,white);
+      header{background: radial-gradient(gold,yellow);
              padding: 30px;
              text-align:center;
              border-radius: 10px;}
@@ -26,8 +26,9 @@
 <h1><marquee><mark>สุขสันต์วันพ่อ 5 ธันวาคม 2568</mark></marquee></h1>
 </header>
 <br><br>
+<center>
 <video width="500" height="400" controls="controls">
-<source src="Dad.mp4">
+<source src="วันพ่อแห่งชาติ.mp4">
 <br><br>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-OvIbyJ8JD9_8uy-35Xbp1Cr_gaf5vi0mwA&s" width=400 height=300>
 <br><br>
