--- a/dad.html
+++ b/dad.html
@@ -30,6 +30,10 @@
 <video width="500" height="400" controls="controls">
 <source src="dad.mp4">
 <br><br>
+<h1><mark>สิ่งที่อยากบอกพ่อ</mark></h1>
+<p>พ่อคือคนสำคัญที่สุดคนหนึ่งในชีวิตของผม พ่อเป็นคนที่ทำงานหนัก อดทน และเสียสละเพื่อครอบครัวมาโดยตลอด ถึงแม้บางครั้งพ่อจะไม่พูดอะไร แต่หนูรับรู้ได้ถึงความรักและความห่วงใยที่พ่อมีให้เสมอ ทุกคำสอนและการกระทำของพ่อ เป็นสิ่งที่ทำให้ผมได้เรียนรู้การใช้ชีวิตอย่างเข้มแข็ง</p>
+<p>ผมอยากขอบคุณพ่อที่คอยดูแล ปกป้อง และเป็นกำลังใจให้ผมในทุกช่วงเวลา พ่อสอนให้ผมเป็นคนดี มีความรับผิดชอบ และไม่ยอมแพ้ต่ออุปสรรค ผมสัญญาว่าจะตั้งใจเรียน ประพฤติตนให้ดี และทำหน้าที่ของลูกให้ดีที่สุด เพื่อให้พ่อสบายใจและภูมิใจในตัวผมเสมอ</p>
+<p>สุดท้ายนี้ ผมอยากบอกพ่อว่า ผมรักพ่อมาก และขอให้พ่อมีสุขภาพแข็งแรง อยู่เป็นร่มโพธิ์ร่มไทรของครอบครัวไปนาน ๆ ครับ</p>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS-OvIbyJ8JD9_8uy-35Xbp1Cr_gaf5vi0mwA&s" width=400 height=300>
 <br><br>
       
