--- a/personal.html
+++ b/personal.html
@@ -24,4 +24,10 @@
   </head>
   <body background="https://media.istockphoto.com/id/472347896/photo/striped-soccer-field.jpg?s=612x612&w=0&k=20&c=wgeavCCOimF1b5mrv9QNQuuJqs1ERX67pDjPT3yv8j8=">
   <h1><marquee><mark>ประวัติส่วนตัว💛</mark></marquee></h1>
+      <img src="me.jpg" width=300 height=400
+      style="border:5px dotted skyblue;">
+  <br><br>
+  <h1><mark>ด.ช.ปุณณพัสณ์ เอี่ยมชื่น</mark></h1><br>
+  <h2>ชื่อเล่น : ปุณณ์ อายุ 13 ปี<br>
+  โรงเรียนสวนกุหลาบวิทยาลัย
   
