--- a/personal.html
+++ b/personal.html
@@ -27,7 +27,11 @@
       <img src="me.jpg" width=300 height=400
       style="border:5px dotted skyblue;">
   <br><br>
+  <center>
   <h1><mark>ด.ช.ปุณณพัสณ์ เอี่ยมชื่น</mark></h1><br>
-  <h2>ชื่อเล่น : ปุณณ์ อายุ 13 ปี<br>
-  โรงเรียนสวนกุหลาบวิทยาลัย
-  
+  <font style="color:pink"><h2>ชื่อเล่น : ปุณณ์ อายุ 13 ปี<br></font>
+  <mark>โรงเรียนสวนกุหลาบวิทยาลัย<mark><br>
+  <font style="color:blue">ชั้นมัธยมศึกษาปีที่ 2 ห้อง 212</font>
+  <font style="color:violet">ครูประจำชั้น : ครูสุพรรณมณี ใจสุข<br>
+  ครูสีวลี บุตรเสวก</font>
+  </h2></center>
