--- a/personal.html
+++ b/personal.html
@@ -29,9 +29,12 @@
   <br><br>
   <center>
   <h1><mark>ด.ช.ปุณณพัสณ์ เอี่ยมชื่น</mark></h1><br>
-  <font style="color:pink"><h2>ชื่อเล่น : ปุณณ์ อายุ 13 ปี<br></font>
+  <font style="color:hotpink"><h2>ชื่อเล่น : ปุณณ์ อายุ 13 ปี<br></font>
   <mark>โรงเรียนสวนกุหลาบวิทยาลัย<mark><br>
   <font style="color:blue">ชั้นมัธยมศึกษาปีที่ 2 ห้อง 212</font>
   <font style="color:violet">ครูประจำชั้น : ครูสุพรรณมณี ใจสุข<br>
-  ครูสีวลี บุตรเสวก</font>
+  ครูสีวลี บุตรเสวก</font><br>
+  <font style="color:orange">สิ่งที่ชอบทำ : เล่นเกม</font><br>
+  <font style="color:red">สิ่งที่อยากเป็น : วิศวกร</font><br>
+  <mark>สีที่ชอบ</mark>
   </h2></center>
