--- a/personal.html
+++ b/personal.html
@@ -29,12 +29,14 @@
   <br><br>
   <center>
   <h1><mark>ด.ช.ปุณณพัสณ์ เอี่ยมชื่น</mark></h1><br>
-  <font style="color:hotpink"><h2>ชื่อเล่น : ปุณณ์ อายุ 13 ปี<br></font>
-  <mark>โรงเรียนสวนกุหลาบวิทยาลัย<mark><br>
+  <font style="color:hotpink"><h2>ชื่อเล่น : ปุณณ์ อายุ 13 ปี<br><br></font>
+  <mark>โรงเรียนสวนกุหลาบวิทยาลัย<mark><br><br>
   <font style="color:blue">ชั้นมัธยมศึกษาปีที่ 2 ห้อง 212</font>
-  <font style="color:violet">ครูประจำชั้น : ครูสุพรรณมณี ใจสุข<br>
-  ครูสีวลี บุตรเสวก</font><br>
-  <font style="color:orange">สิ่งที่ชอบทำ : เล่นเกม</font><br>
-  <font style="color:red">สิ่งที่อยากเป็น : วิศวกร</font><br>
-  <mark>สีที่ชอบ</mark>
+  <font style="color:violet">ครูประจำชั้น : ครูสุพรรณมณี ใจสุข<br><br>
+  ครูสีวลี บุตรเสวก</font><br><br>
+  <font style="color:orange">สิ่งที่ชอบทำ : เล่นเกม</font><br><br>
+  <font style="color:red">สิ่งที่อยากเป็น : วิศวกร</font><br><br>
+  <mark>สีที่ชอบ : ชมพู ฟ้า</mark><br><br>
+  <font style="color:brown">ผลไม้ที่ชอบ : แอปเปิ้ล ส้ม</font><br><br>
+    <font syle="color:skyblue"></font>
   </h2></center>
