--- a/personal.html
+++ b/personal.html
@@ -30,7 +30,7 @@
   <center>
   <h1><mark>ด.ช.ปุณณพัสณ์ เอี่ยมชื่น</mark></h1><br>
   <font style="color:hotpink"><h2>ชื่อเล่น : ปุณณ์ อายุ 13 ปี<br><br></font>
-  <mark>โรงเรียนสวนกุหลาบวิทยาลัย<mark><br><br>
+  <mark>โรงเรียนสวนกุหลาบวิทยาลัย</mark><br><br>
   <font style="color:blue">ชั้นมัธยมศึกษาปีที่ 2 ห้อง 212</font>
   <font style="color:violet">ครูประจำชั้น : ครูสุพรรณมณี ใจสุข<br><br>
   ครูสีวลี บุตรเสวก</font><br><br>
@@ -38,5 +38,6 @@
   <font style="color:red">สิ่งที่อยากเป็น : วิศวกร</font><br><br>
   <mark>สีที่ชอบ : ชมพู ฟ้า</mark><br><br>
   <font style="color:brown">ผลไม้ที่ชอบ : แอปเปิ้ล ส้ม</font><br><br>
-    <font syle="color:skyblue"></font>
+  <font syle="color:skyblue">เครื่องดื่มที่ชอบ : น้ำเปล่า</font><br><br>
+  <font style>
   </h2></center>
