--- a/personal.html
+++ b/personal.html
@@ -22,14 +22,15 @@
              border-radius: 10px;}
     </style>
   </head>
-  <body background="https://media.istockphoto.com/id/472347896/photo/striped-soccer-field.jpg?s=612x612&w=0&k=20&c=wgeavCCOimF1b5mrv9QNQuuJqs1ERX67pDjPT3yv8j8=">
+  <body background="https://media.istockphoto.com/id/1872620886/vector/abstract-background-wall-decor-digital-background-with-copy-space.jpg?s=612x612&w=0&k=20&c=vXBPOylOK3SrrzRAh4tidXduRNlnd717VbdU0_Qn2RY=">
   <h1><marquee><mark>ประวัติส่วนตัว💛</mark></marquee></h1>
       <img src="me.jpg" width=300 height=400
       style="border:5px dotted skyblue;">
   <br><br>
   <center>
   <h1><mark>ด.ช.ปุณณพัสณ์ เอี่ยมชื่น</mark></h1><br>
-  <font style="color:hotpink"><h2>ชื่อเล่น : ปุณณ์ อายุ 13 ปี<br><br></font>
+  <center>
+  <h2><font style="color:hotpink">ชื่อเล่น : ปุณณ์ อายุ 13 ปี</font><br><br>
   <mark>โรงเรียนสวนกุหลาบวิทยาลัย</mark><br><br>
   <font style="color:blue">ชั้นมัธยมศึกษาปีที่ 2 ห้อง 212</font>
   <font style="color:violet">ครูประจำชั้น : ครูสุพรรณมณี ใจสุข<br><br>
@@ -38,6 +39,6 @@
   <font style="color:red">สิ่งที่อยากเป็น : วิศวกร</font><br><br>
   <mark>สีที่ชอบ : ชมพู ฟ้า</mark><br><br>
   <font style="color:brown">ผลไม้ที่ชอบ : แอปเปิ้ล ส้ม</font><br><br>
-  <font syle="color:skyblue">เครื่องดื่มที่ชอบ : น้ำเปล่า</font><br><br>
-  <font style>
-  </h2></center>
+  <font style="color:skyblue">เครื่องดื่มที่ชอบ : น้ำเปล่า</font><br><br>
+  <font style="color:green">เบอร์โทร : 0647936667</font><br><br>
+  </h2>
