--- a/personal.html
+++ b/personal.html
@@ -32,7 +32,7 @@
   </center>
   <h2><font style="color:hotpink">ชื่อเล่น : ปุณณ์ อายุ 13 ปี</font><br><br>
   <mark>โรงเรียนสวนกุหลาบวิทยาลัย</mark><br><br>
-  <font style="color:blue">ชั้นมัธยมศึกษาปีที่ 2 ห้อง 212</font>
+  <font style="color:blue">ชั้นมัธยมศึกษาปีที่ 2 ห้อง 212</font><br><br>
   <font style="color:purple">ครูประจำชั้น : ครูสุพรรณมณี ใจสุข<br><br>
   ครูสีวลี บุตรเสวก</font><br><br>
   <font style="color:orange">สิ่งที่ชอบทำ : เล่นเกม</font><br><br>
@@ -42,4 +42,14 @@
   <font style="color:blue">เครื่องดื่มที่ชอบ : น้ำเปล่า</font><br><br>
   <font style="color:green">เบอร์โทร : 0647936667</font><br><br>
   </h2><br><br>
-  <h1><mark>กิจกรรมระดับ ม.2 ของฉัน</mark></h1>
+  <center>
+  <h1><mark>กิจกรรมระดับ ม.2 ของฉัน</mark></h1><br><br>
+<img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBNP8EXKNaB-mRiUExbM2U5hFjzHEZHHFpI41IB7-kcEhF1GoEmfKpixnjHOGnSXzN9ujjaI1POPaRosEPbkkbx0Bld3MThhhjAAiviyjxlaGlZkcg=w105-h70-c" width=300 height=400
+style="border:5px dotted skyblue;"><br><br>
+<h1><mark>กิจกรรมสมานมิตร</mark></h1><br><br>
+<img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBPsPKdt9uapJdr7qoe3eYKAi4iUrJdq7BTx3WAoz11i3X2Zqmp3kEE09CkactHFw0xVUXw9xKtP2M2grCGHZw0qabTe_GUvvNo8rhne7CEeMywwsA=w105-h70-c" width=300 height=400
+style="border:5px dotted skyblue;"><br><br>
+<h1><mark>กิจกรรมวันปีใหม่</mark></h1><br><br>
+<img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBPsPKdt9uapJdr7qoe3eYKAi4iUrJdq7BTx3WAoz11i3X2Zqmp3kEE09CkactHFw0xVUXw9xKtP2M2grCGHZw0qabTe_GUvvNo8rhne7CEeMywwsA=w105-h70-c" width=300 height=400
+style="border:5px dotted skyblue;"><br><br>
+  </center>
