--- a/personal.html
+++ b/personal.html
@@ -44,12 +44,16 @@
   </h2><br><br>
   <center>
   <h1><mark>กิจกรรมระดับ ม.2 ของฉัน</mark></h1><br><br>
-<img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBNP8EXKNaB-mRiUExbM2U5hFjzHEZHHFpI41IB7-kcEhF1GoEmfKpixnjHOGnSXzN9ujjaI1POPaRosEPbkkbx0Bld3MThhhjAAiviyjxlaGlZkcg=w105-h70-c" width=300 height=400
+<img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBNP8EXKNaB-mRiUExbM2U5hFjzHEZHHFpI41IB7-kcEhF1GoEmfKpixnjHOGnSXzN9ujjaI1POPaRosEPbkkbx0Bld3MThhhjAAiviyjxlaGlZkcg=w1920-h953?auditContext=forDisplay" width=300 height=400
 style="border:5px dotted skyblue;"><br><br>
 <h1><mark>กิจกรรมสมานมิตร</mark></h1><br><br>
-<img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBPsPKdt9uapJdr7qoe3eYKAi4iUrJdq7BTx3WAoz11i3X2Zqmp3kEE09CkactHFw0xVUXw9xKtP2M2grCGHZw0qabTe_GUvvNo8rhne7CEeMywwsA=w105-h70-c" width=300 height=400
+<img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBPsPKdt9uapJdr7qoe3eYKAi4iUrJdq7BTx3WAoz11i3X2Zqmp3kEE09CkactHFw0xVUXw9xKtP2M2grCGHZw0qabTe_GUvvNo8rhne7CEeMywwsA=w1920-h953?auditContext=forDisplay" width=300 height=400
 style="border:5px dotted skyblue;"><br><br>
-<h1><mark>กิจกรรมวันปีใหม่</mark></h1><br><br>
-<img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBPsPKdt9uapJdr7qoe3eYKAi4iUrJdq7BTx3WAoz11i3X2Zqmp3kEE09CkactHFw0xVUXw9xKtP2M2grCGHZw0qabTe_GUvvNo8rhne7CEeMywwsA=w105-h70-c" width=300 height=400
+<h1><mark>กิจกรรมครู</mark></h1><br><br>
+<img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBMqMnhUQcz_cQg9H0YTgdq7HsneIpN7gfWkRAaZRt0cyVuigNJzBN2Dvp81ZolPEmAMsNYWc50hqtOBbuL3Xlzag321ZUTEM0GgakBBt718Zff9ig=w1920-h953?auditContext=forDisplay" width=300 height=400
 style="border:5px dotted skyblue;"><br><br>
+<h1><mark>กิจกรรมจตุรมิตร</mark></h1><br><br>
+<img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBPMt-HPkuvjuv_bbgSnWZIMwgEbfKDU1E4HnxAB2NbW7qQP0lSV6y-1VIEdbIbLBX5y4aJEZwPZYIzF6Wf3TD_pJG9itg-IAjpjTY56BD83flsPUg=w1920-h953?auditContext=forDisplay" width=300 height=400
+style="border:5px dotted skyblue;"><br><br>
+<h1><mark>กิจกรรมวันปีใหม่</mark></h1>
   </center>
