--- a/personal.html
+++ b/personal.html
@@ -67,5 +67,15 @@ style="border:5px dotted skyblue;"><br><br>
 <h1><mark>กิจกรรมวันเปิดเทอม</mark></h1><br><br>
 <img src="https://scontent.fbkk11-1.fna.fbcdn.net/v/t39.30808-6/528244495_1200605678537459_18666373513482347_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=127cfc&_nc_ohc=SoitaFfu1c4Q7kNvwExG5bl&_nc_oc=AdlKJVVSxZbwbIzQoWYvmJ87aIKlE5R--Lr5Xg5lokT_rZ1Hk7ZjpB2O-kIQLyBly_o&_nc_zt=23&_nc_ht=scontent.fbkk11-1.fna&_nc_gid=1QRApm7Mn-PP5RXPM_e5rQ&oh=00_Afu8IXwDRYeOvWZBpQcIr6Jce_hIXjdH37ker3uItVSxzQ&oe=698B2132"
 style="border:5px dotted skyblue;"><br><br>
-  
+<h1><mark>ผลงานเว็บไซต์ของฉัน<br><br>
+กดปุ่มเพื่อชมเว็บไซต์</mark></h1>
+<h2>
+<button1 onclick="document.location='http://www.sk.ac.th/'">โรงเรียนสวนกุหลาบวิทยาลัย 🌹</button1>
+&nbsp;&nbsp;&nbsp;
+<button2 onclick="document.location='https://www.debsirin.ac.th/'">โรงเรียนเทพศิรินทร์ 🔰</button2>
+&nbsp;&nbsp;&nbsp;
+<button3 onclick="document.location='https://www.assumption.ac.th/'">โรงเรียนอัสสัมชัญ 🍗</button3>
+&nbsp;&nbsp;&nbsp;
+<button4 onclick="document.location='https://www.bcc.ac.th/2019/'">โรงเรียนกรุงเทพคริสเตียนวิทยาลัย 🍇</button4>
+</h2>
 </center>
