--- a/personal.html
+++ b/personal.html
@@ -70,12 +70,10 @@ style="border:5px dotted skyblue;"><br><br>
 <h1><mark>ผลงานเว็บไซต์ของฉัน<br><br>
 กดปุ่มเพื่อชมเว็บไซต์</mark></h1>
 <h2>
-<button1 onclick="document.location='http://www.sk.ac.th/'">โรงเรียนสวนกุหลาบวิทยาลัย 🌹</button1>
+<button1 onclick="">วันพ่อ</button1>
 &nbsp;&nbsp;&nbsp;
-<button2 onclick="document.location='https://www.debsirin.ac.th/'">โรงเรียนเทพศิรินทร์ 🔰</button2>
+<button2 onclick="">วันปีใหม่</button2>
 &nbsp;&nbsp;&nbsp;
-<button3 onclick="document.location='https://www.assumption.ac.th/'">โรงเรียนอัสสัมชัญ 🍗</button3>
-&nbsp;&nbsp;&nbsp;
-<button4 onclick="document.location='https://www.bcc.ac.th/2019/'">โรงเรียนกรุงเทพคริสเตียนวิทยาลัย 🍇</button4>
+<button3 onclick="">วันเด็ก</button3>
 </h2>
 </center>
