--- a/personal.html
+++ b/personal.html
@@ -70,10 +70,11 @@ style="border:5px dotted skyblue;"><br><br>
 <h1><mark>ผลงานเว็บไซต์ของฉัน<br><br>
 กดปุ่มเพื่อชมเว็บไซต์</mark></h1>
 <h2>
-<button1 onclick="">วันพ่อ</button1>
-&nbsp;&nbsp;&nbsp;
-<button2 onclick="">วันปีใหม่</button2>
-&nbsp;&nbsp;&nbsp;
-<button3 onclick="">วันเด็ก</button3>
+<button1 onclick="https://www.canva.com/design/DAG_5UexiQI/r2MdEwAWfDZ5Gy9D6r5_FA/edit?utm_content=DAG_5UexiQI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">วันพ่อ</button1>
+<br><br>
+<button2 onclick="https://punnapat13.github.io/punnapat.github.io/newyear.html">วันปีใหม่</button2>
+<br><br>
+<button3 onclick="https://www.canva.com/design/DAG_2tKrt6U/o8R1WdjoMha_KKmxim0AXg/edit?utm_content=DAG_2tKrt6U&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">วันเด็ก</button3>
+
 </h2>
 </center>
