--- a/personal.html
+++ b/personal.html
@@ -12,9 +12,9 @@
   font-style: normal;
   cursor:url("jatu.png"),auto; height:100vh;}
        mark{background: linear-gradient(hotpink,lightskyblue);color:black;}
-      button1{background: linear-gradient(hotpink,skyblue);color:blue;}
-      button2{background: linear-gradient(green,yellow);color:blue;}
-      button3{background: linear-gradient(red,white);color:blue;}
+      button1{background: linear-gradient(yellow,orange);color:blue;}
+      button2{background: linear-gradient(red,white);color:blue;}
+      button3{background: linear-gradient(skyblue,yellow);color:blue;}
       button4{background: linear-gradient(darkviolet,gold);color:blue;}
       header{background: radial-gradient(lightpink,skyblue,white);
              padding: 30px;
@@ -65,10 +65,8 @@ style="border:5px dotted skyblue;"><br><br>
 <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa5BEjCgg7YOyymjbw4n5OK1SddQBJw6WaXZSQMFTcqT4oHiks9be.jpg"
 style="border:5px dotted skyblue;"><br><br>
 <h1><mark>กิจกรรมวันเปิดเทอม</mark></h1><br><br>
-<img src="https://scontent.fbkk11-1.fna.fbcdn.net/v/t39.30808-6/528244495_1200605678537459_18666373513482347_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=127cfc&_nc_ohc=SoitaFfu1c4Q7kNvwExG5bl&_nc_oc=AdlKJVVSxZbwbIzQoWYvmJ87aIKlE5R--Lr5Xg5lokT_rZ1Hk7ZjpB2O-kIQLyBly_o&_nc_zt=23&_nc_ht=scontent.fbkk11-1.fna&_nc_gid=1QRApm7Mn-PP5RXPM_e5rQ&oh=00_Afu8IXwDRYeOvWZBpQcIr6Jce_hIXjdH37ker3uItVSxzQ&oe=698B2132"
-style="border:5px dotted skyblue;"><br><br>
 <h1><mark>ผลงานเว็บไซต์ของฉัน<br><br>
-กดปุ่มเพื่อชมเว็บไซต์</mark></h1>
+  <font style="red">กดปุ่มเพื่อชมเว็บไซต์</font></mark></h1>
 <h2>
 <button1 onclick="https://www.canva.com/design/DAG_5UexiQI/r2MdEwAWfDZ5Gy9D6r5_FA/edit?utm_content=DAG_5UexiQI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">วันพ่อ</button1>
 <br><br>
