--- a/personal.html
+++ b/personal.html
@@ -9,8 +9,7 @@
     body {
   font-family: "Thasadith", sans-serif;
   font-weight: 400;
-  font-style: normal;
-  cursor:url("jatu.png"),auto; height:100vh;}
+  font-style: normal;}
        mark{background: linear-gradient(hotpink,lightskyblue);color:black;}
       button1{background: linear-gradient(yellow,orange);color:blue;}
       button2{background: linear-gradient(red,white);color:blue;}
@@ -65,8 +64,8 @@ style="border:5px dotted skyblue;"><br><br>
 <img src="https://static.thairath.co.th/media/dFQROr7oWzulq5Fa5BEjCgg7YOyymjbw4n5OK1SddQBJw6WaXZSQMFTcqT4oHiks9be.jpg"
 style="border:5px dotted skyblue;"><br><br>
 <h1><mark>กิจกรรมวันเปิดเทอม</mark></h1><br><br>
-<h1><mark>ผลงานเว็บไซต์ของฉัน<br><br>
-  <font style="red">กดปุ่มเพื่อชมเว็บไซต์</font></mark></h1>
+<h1>ผลงานเว็บไซต์ของฉัน<br><br>
+กดปุ่มเพื่อชมเว็บไซต์</h1>
 <h2>
 <button1 onclick="https://www.canva.com/design/DAG_5UexiQI/r2MdEwAWfDZ5Gy9D6r5_FA/edit?utm_content=DAG_5UexiQI&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">วันพ่อ</button1>
 <br><br>
